Correct more styling

--- a/pages/tusome/ukuharura/magana-gatanu.mdx
+++ b/pages/tusome/ukuharura/magana-gatanu.mdx
@@ -10,8 +10,8 @@
 507 = Magana gatanu na bulinda  
 508 = Magana gatanu na munaana  
 509 = Magana gatanu na mweenda
-510 = Magana gatanu n'ikumi
 
+510 = Magana gatanu n'Ikumi  
 511 = Magana gatanu n'ikumi na higuma  
 512 = Magana gatanu n'ikumi na bubiri  
 513 = Magana gatanu n'ikumi na bushatu  
@@ -22,8 +22,8 @@
 518 = Magana gatanu n'ikumi na munaana  
 519 = Magana gatanu n'ikumi na mweenda
 
-520 = Magana gatanu na makumi gabiri
-521 = Magana gatanu na makumi gabiri na higuma
+520 = Magana gatanu na makumi gabiri  
+521 = Magana gatanu na makumi gabiri na higuma  
 522 = Magana gatanu na makumi gabiri na bubiri  
 523 = Magana gatanu na makumi gabiri na bushatu  
 524 = Magana gatanu na makumi gabiri na buna  
@@ -33,8 +33,8 @@
 528 = Magana gatanu na makumi gabiri na munaana  
 529 = Magana gatanu na makumi gabiri na mweenda
 
-530 = Magana gatanu na makumi gashatu
-531 = Magana gatanu na makumi gashatu na higuma
+530 = Magana gatanu na makumi gashatu  
+531 = Magana gatanu na makumi gashatu na higuma  
 532 = Magana gatanu na makumi gashatu na bubiri  
 533 = Magana gatanu na makumi gashatu na bushatu  
 534 = Magana gatanu na makumi gashatu na buna  
@@ -44,8 +44,8 @@
 538 = Magana gatanu na makumi gashatu na munaana  
 539 = Magana gatanu na makumi gashatu na mweenda
 
-540 = Magana gatanu na makumi gana
-541 = Magana gatanu na makumi gana na higuma
+540 = Magana gatanu na makumi gana  
+541 = Magana gatanu na makumi gana na higuma  
 542 = Magana gatanu na makumi gana na bubiri  
 543 = Magana gatanu na makumi gana na bushatu  
 544 = Magana gatanu na makumi gana na buna  
@@ -55,8 +55,8 @@
 548 = Magana gatanu na makumi gana na munaana  
 549 = Magana gatanu na makumi gana na mweenda
 
-550 = Magana gatanu na makumi gatanu
-551 = Magana gatanu na makumi gatanu na higuma
+550 = Magana gatanu na makumi gatanu  
+551 = Magana gatanu na makumi gatanu na higuma  
 552 = Magana gatanu na makumi gatanu na bubiri  
 553 = Magana gatanu na makumi gatanu na bushatu  
 554 = Magana gatanu na makumi gatanu na buna  
@@ -66,8 +66,8 @@
 558 = Magana gatanu na makumi gatanu na munaana  
 559 = Magana gatanu na makumi gatanu na mweenda
 
-560 = Magana gatanu na makumi galindatu
-561 = Magana gatanu na makumi galindatu na higuma
+560 = Magana gatanu na makumi galindatu  
+561 = Magana gatanu na makumi galindatu na higuma  
 562 = Magana gatanu na makumi galindatu na bubiri  
 563 = Magana gatanu na makumi galindatu na bushatu  
 564 = Magana gatanu na makumi galindatu na buna  
@@ -77,8 +77,8 @@
 568 = Magana gatanu na makumi galindatu na munaana  
 169 = Magana gatanu na makumi galindatu na mweenda
 
-570 = Magana gatanu na makumi galinda
-571 = Magana gatanu na makumi galinda na higuma
+570 = Magana gatanu na makumi galinda  
+571 = Magana gatanu na makumi galinda na higuma  
 572 = Magana gatanu na makumi galinda na bubiri  
 573 = Magana gatanu na makumi galinda na bushatu  
 574 = Magana gatanu na makumi galinda na buna  
@@ -88,8 +88,8 @@
 578 = Magana gatanu na makumi galinda na munaana  
 579 = Magana gatanu na makumi galinda na mweenda
 
-580 = Magana gatanu na makumi galimunaana
-581 = Magana gatanu na makumi galimunaana na higuma
+580 = Magana gatanu na makumi galimunaana  
+581 = Magana gatanu na makumi galimunaana na higuma  
 582 = Magana gatanu na makumi galimunaana na bubiri  
 583 = Magana gatanu na makumi galimunaana na bushatu  
 584 = Magana gatanu na makumi galimunaana na buna  
@@ -99,8 +99,8 @@
 588 = Magana gatanu na makumi galimunaana na munaana  
 589 = Magana gatanu na makumi galimunaana na mweenda
 
-590 = Magana gatanu na makumi galimweenda
-591 = Magana gatanu na makumi galimweenda na higuma
+590 = Magana gatanu na makumi galimweenda  
+591 = Magana gatanu na makumi galimweenda na higuma  
 592 = Magana gatanu na makumi galimweenda na bubiri  
 593 = Magana gatanu na makumi galimweenda na bushatu  
 594 = Magana gatanu na makumi galimweenda na buna  
