Add some changes

--- a/pages/tusome/ukuharura/umulyari.mdx
+++ b/pages/tusome/ukuharura/umulyari.mdx
@@ -89,6 +89,6 @@ Ukuharura kwoshi tukola muharura, kukola kugenda tugayubakira naho ku byooshi ke
 1.000.000.000.000.000 = Imilyari mulyoni
 ...
 
-Ku kyanya kera twahika hano ho bikola bikayu ukudeta kwo tugenderere ukuharura, tukolaga tugayingira mu kuharura kandi li [hesabu za higulu](./ukuharura-ukuleziizi).
+Ku kyanya kera twahika hano ho bikola bikayu ukudeta kwo tugenderere ukuharura, tukolaga tugayingira mu kuharura kandi li hesabu za higulu, ukuharura ukuleziizi.
 
 Tugagenderera ukuyandika...
