Add changes on link to 400 from 300

--- a/pages/tusome/ukuharura/magana-gashatu.mdx
+++ b/pages/tusome/ukuharura/magana-gashatu.mdx
@@ -110,4 +110,4 @@
 398 = Magana gashatu na makumi galimweenda na munaana  
 399 = Magana gashatu na makumi galimweenda na mweenda
 
-Ukuharura kushagira ku [Magana gashatu hano](./magana-gashatu).
+Ukuharura kushagira ku [Magana gana hano](./magana-gana).
