Add changes on link to 1000 from 900

--- a/pages/tusome/ukuharura/magana-galimweenda.mdx
+++ b/pages/tusome/ukuharura/magana-galimweenda.mdx
@@ -110,4 +110,4 @@
 998 = Magana galimweenda na makumi galimweenda na munaana  
 999 = Magana galimweenda na makumi galimweenda na mweenda
 
-Ukuharura kushagira ku [Ikihumbi hano](./kihumbi).
+Ukuharura kushagira ku [Ikihumbi hano](./kihumbi-no-kuzamuuka).
