Change zero to ubusha

--- a/pages/tusome/ukuharura/ikumi-ku-igana.mdx
+++ b/pages/tusome/ukuharura/ikumi-ku-igana.mdx
@@ -1,6 +1,6 @@
 # Harura kushagira ku Ikumi kuhisa ku igana
 
-Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [zero kandi li namuteneka ku ikumi](./zero-ku-ikumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
+Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [Ubusha ku ikumi](./zero-ku-ikumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
 
 ## Kuti tugaharura?
 
