--- a/pages/tusome/ukuharura/ndondeero.mdx
+++ b/pages/tusome/ukuharura/ndondeero.mdx
@@ -13,4 +13,4 @@ Ikindu kihamu kuliri kutemenya ukuharura ukushagira ku higuma ukuhisa kw'ikumi. 
 
 Tugakizi harura mu njira zibiri: Umuharura na ngisi kwo muyandikwa mu Kifuliiru.
 
-Gwajika hano ku [Zero ku Ikumi](./zero-ku-ikumi).
+Gwajika hano ku [Ubusha ku Ikumi](./zero-ku-ikumi).
