--- a/pages/tusome/ukuharura/zero-ku-ikumi.mdx
+++ b/pages/tusome/ukuharura/zero-ku-ikumi.mdx
@@ -6,7 +6,7 @@ Li wangaba ugweti 11, kuliri kudeta kwo ugweti ikumi ne' higuma ibutambi. Kwo ku
 
 Kwokuno:
 
-0 = Ubusha/zero/Namuteneka  
+0 = Ubusha/Namuteneka  
 1 = Higuma  
 2 = Bubiri  
 3 = Bushatu  
@@ -18,4 +18,4 @@ Kwokuno:
 9 = Mweenda  
 10 = Ikumi
 
-Tukolaga tugakulikiza ukushagaga ku [ikumi ukuhisa ku igana](./ikumi-ku-igana).
+Tukolaga tugakulikiza ukushagaga ku [Ikumi ukuhisa ku igana](./ikumi-ku-igana).
