Change zero to ubusha

--- a/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
+++ b/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
@@ -1,19 +1,11 @@
 # Igana ku Kuhimbi
 
-Ukuharura ukushaga ku igana kandi li ijana ukuhisa ku kuhumbi kaliri kazi kahamu bweneene na kandi kaliri kingi. Haliko umwazi mwija kuliri kudeta kwo kukolaga kuyubakira ku ndigi byo kera twasoma mu [Zero ukuhisa ku mweenda](./zero-ku-ikumi) na [Ikumi ukuhisa ku Ijana](./ikumi-ku-igana).
+Ukuharura ukushaga ku igana kandi li ijana ukuhisa ku kuhumbi kaliri kazi kahamu bweneene na kandi kaliri kingi. Haliko umwazi mwija kuliri kudeta kwo kukolaga kuyubakira ku ndigi byo kera twasoma mu [Ubusha ukuhisa ku mweenda](./zero-ku-ikumi) na [Ikumi ukuhisa ku Ijana](./ikumi-ku-igana).
 
 ## Kuti tugaharura yibyo bindu bingi kwookwo?
 
 Twehe tukasalira bweneene ukudeta kwo tuhikire ku ikino ndaambo yo'kudeta kwo tubike ngisi byooshi Umufuliiru angaharura, tunabibike hano ukudeta kwo Umufuliiru akakizi bilongera hofi, na twehe nyene tugabilongera hano ku kyanya tugakiziba tubilooziizi.
 
-Injira kandi li formule, yeno hano:
-
-### Igana ku magana gabiri
-
-**Ijana + na+..**
-
-### Amagana gabiri
-
-**Magana gabiri + na+...**
+Injira kandi li formule, yeno hano: Tugayubakira ku ngisi byo tukoligweti.
 
 Higulu lyo'kubona kwo ukuharura ukushagira kw'igana ukuhisa ku kihumbi bigaluga bweneene, twasima tugabure ngisi muharuro mu kibaaja kyagwo: [Igana](./igana), [Amagana gabiri](./magana-gabiri), [Amagana gashatu](./magana-gashatu), [Amagana gana](./magana-gana), [Amagana gatanu](./magana-gatanu), [Amagana galindatu](./magana-galindatu), [Amagana galinda](./magana-galinda), [Amagana galimunaana](./magana-galimunaana), [Amagana galimweenda](./magana-galimweenda), [ikihumbi](./hihumbi).
