Change zero to ubusha

--- a/pages/tusome/ukuharura/igana.mdx
+++ b/pages/tusome/ukuharura/igana.mdx
@@ -1,7 +1,7 @@
 # Kuharura kusagira ku ihana kuhisa ku ihana na makumi galwenda na mwenda (100-199)
 
 Hano tuloziizi tuharure ukushagira ku igana ukuhisa ku igana na makumi galimwenda na mweenda.
-Ikindu tukwaniini ukuemya no'kukengera, kuliri kudeta kwo ikyanya twabona ku kuharura ukushagira ku igana ikuhisa ku kihumbi, twadeta kwo tugayubakira ku ngisi byo tukoligweti byo twabona mu [Zero ku ikumi](./zero-ku-ikumi) na ku [Ikumi kw'igana](./ikumi-ku-igana).
+Ikindu tukwaniini ukuemya no'kukengera, kuliri kudeta kwo ikyanya twabona ku kuharura ukushagira ku igana ikuhisa ku kihumbi, twadeta kwo tugayubakira ku ngisi byo tukoligweti byo twabona mu [Ubusha ku ikumi](./zero-ku-ikumi) na ku [Ikumi kw'igana](./ikumi-ku-igana).
 
 Hano tugagenderera kwookwo haliko tukolaga tugayoongera ku byo tukoligweti mu kubushaga yibyo bibi bya mbere na bino byo'tukolera kwohe.
 
