Change zero to Ubusha

--- a/pages/tusome/ukuharura/zero-ku-ikumi.mdx
+++ b/pages/tusome/ukuharura/zero-ku-ikumi.mdx
@@ -1,4 +1,4 @@
-### Zero kandi li ubusha kandi li namuteneka ukuhisa ku ikumi
+### Ubusha kandi li namuteneka ukuhisa ku ikumi
 
 Ikyanya ukoliyiji ukuharura ukushaga ku busha kandi li zero ukuhisa ku ukumi, yaho kera wamenya bingi higulu ibisigiri bikola binovu bweneene.
 
