--- a/pages/tusome/amagambo/ulufwabe.mdx
+++ b/pages/tusome/amagambo/ulufwabe.mdx
@@ -4,7 +4,9 @@ Mu Kifuliiru tugweti ulufwabe, nga ngisi kwo mu zindi ndeto namwo muliri ulufwab
 
 Ulufwabe lwe' Kifuliiru lwoluno nga ngisi kwo lukulikiri:
 
-a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,r,s,t,u,v,y,z
+a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, r, s, t, u, v, w, y, z
+
+Mu herufi mbamu: A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, R, S, T, U, V, W, Y, Z
 
 a = Herufi ya mbere mu lufwabe lwe' Kifuliiru  
 b = Herufi ya kabiri mu lufwabe lwe' Kifuliiru  
@@ -33,6 +35,35 @@ z = Herufi ya makumi gabiri na kana mu lufwabe lwe' Kifuliiru
 
 Li wangaba ukomiri izindi ndeto nga i Kifransa kandi li i Kingereza, ulufwabe lwabo luliri kwokuno:
 
-a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,x,y,z
+Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, x, y, z
+
+Mu herufi mbaamu: A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z
 
 Twehe ulufwabe lwitu lugweeti iherufi makumi gabiri na zina (24), haliko mu Kifransa na mu Kingereza muliri i herufi makumi gabiri na ndatu (26). Batuhimiri iherufi zibiri: q ne' x (Q, X).
+
+## Kuti tumusoma iherufi zo'lufwabe mu Kifuliiru?
+
+a = [a]  
+b = [bhe]. Ino herufi tumugisoma nga b igwatini ne' h. Kwo kudeta mu Kifuliiru tutamudeta b haliko bh.  
+c = [ch].  
+d = [de]  
+e = [e]  
+f = [fe]  
+g = [ge]  
+h = [he]  
+i = [i]  
+j = [je]  
+k = [ke]  
+l = [le]  
+m = [me]  
+n = [ne]  
+o = [o]  
+p = [pe]  
+r = [re]  
+s = [se]  
+t = [te]  
+u = [u]  
+v = [ve]  
+w = [we]  
+y = [ye]  
+z = [ze]
