Add label for lowercase alphabet

--- a/pages/tusome/amagambo/ulufwabe.mdx
+++ b/pages/tusome/amagambo/ulufwabe.mdx
@@ -4,7 +4,7 @@ Mu Kifuliiru tugweti ulufwabe, nga ngisi kwo mu zindi ndeto namwo muliri ulufwab
 
 Ulufwabe lwe' Kifuliiru lwoluno nga ngisi kwo lukulikiri:
 
-a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, r, s, t, u, v, w, y, z
+Mu herufi niini: a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, r, s, t, u, v, w, y, z
 
 Mu herufi mbamu: A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, R, S, T, U, V, W, Y, Z
 
