--- a/pages/tusome/amagambo/herufi.mdx
+++ b/pages/tusome/amagambo/herufi.mdx
@@ -17,17 +17,7 @@ Mu Kifuliiru izindi herufi izataliri z'izu, tumuziberangira iherufi zo'kugwatani
 Mu herufi niini: b, c, d, f, g, h, j, k, l, m, n, p, r, s, t, v, w, y, z  
 Mu herufi mbamu: B, C, D, F, G, H, J, K, L, M, N, P, R, S, T, V, W, Y, Z
 
-## Tubiike iherufi zibiri kuguma
-
-### Herufi y'izu a:
-
-### Herufi y'izu e:
-
-### Herufi y'izu i:
-
-### Herufi y'izu o:
-
-### Herufi y'izu u:
+## Tubiike iherufi zibiri kuguma: Z'izu na zo'kugwatisa
 
 |     | b   | c   | d   | f   | g   | h   | j   | k   | l   | m   | n   | p   | r   | s   | t   | v   | w   | y   | z   |
 | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
@@ -36,3 +26,15 @@ Mu herufi mbamu: B, C, D, F, G, H, J, K, L, M, N, P, R, S, T, V, W, Y, Z
 | i   | bi  | ci  | di  | fi  | gi  | hi  | ji  | ki  | li  | mi  | ni  | pi  | ri  | i   | ti  | vi  | wi  | yi  | zi  |
 | o   | bo  | co  | do  | fo  | go  | ho  | jo  | ko  | lo  | mo  | no  | po  | ro  | o   | to  | vo  | wo  | yo  | zo  |
 | u   | bu  | cu  | du  | fu  | gu  | hu  | ju  | ku  | lu  | mu  | nu  | pu  | ru  | u   | tu  | vu  | wu  | yu  | zu  |
+
+Mu ndeto zooshi, amagaambo gamushaga mu kugwanatisa i herufi kuguma. Kumuba kugwatisa iherufi zo'kugwatisa na z'isu.
+
+## Kushaaza amagambo mu herufi
+
+Ku kyanya wahebwa i herufi kwokwoshi kulya nzagaba, zangaba herufi zooshi zo'lufwabe, wangashaaza mwohe amagambo gatali na maniini. Halikago, kuliri kumenya kwo amagambo ge'Kifuliiru kutaliri naho kugwatwisa iherufi kuguma. Haliri herufi wangabiika kuguma zinashaga mwohe amagambo haliko yago magaambo ganabe gatagweti kwo gadesiri mu kifuliiru. Byo bitumiri, ikyanya wagwatisa iherufi inyingi ukudeta kwo ushaaze mwohe amagaambo, ukolaga ugashubi galuka unalolage li yabo magaambo gagweti kwo gadesiri mu Kifuliiru.
+
+## Tuloonge amagaambo
+
+Hano tugaba tugagtisa iherufi halinde tuloonge amagambo mingi. Haliko [ulenge hano ulole yago magambo](./bingi-ku-kifuliiru/amagambo) li galiri mu KIFULIIRU.
+
+Tugwajike:
