Change link to amagambo

--- a/pages/tusome/amagambo/herufi.mdx
+++ b/pages/tusome/amagambo/herufi.mdx
@@ -35,6 +35,6 @@ Ku kyanya wahebwa i herufi kwokwoshi kulya nzagaba, zangaba herufi zooshi zo'luf
 
 ## Tuloonge amagaambo
 
-Hano tugaba tugagtisa iherufi halinde tuloonge amagambo mingi. Haliko [ulenge hano ulole yago magambo](../bingi-ku-kifuliiru/amagambo) li galiri mu KIFULIIRU.
+Hano tugaba tugagtisa iherufi halinde tuloonge amagambo mingi. Haliko [ulenge hano ulole yago magambo](../../bingi-ku-kifuliiru/amagambo) li galiri mu KIFULIIRU.
 
 Tugwajike:
