Add magana gashatu on Kihumbi

--- a/pages/tusome/ukuharura/kihumbi.mdx
+++ b/pages/tusome/ukuharura/kihumbi.mdx
@@ -1,6 +1,8 @@
-# Ukuharurua kushagira ku kihumbi ukuhisa ku bihumbi bibiri 
+# Ukuharurua kushagira ku kihumbi ukuhisa ku kihumbi na gana galimweenda na mweenda 
 
-## Ukuharurua kushagira ku kihumbi ukuhisa ku kihumbi n'igana (1.000 - 1.099)  
+## Kihumbi ukuhisa ku kihumbi na makumi galimweenda na mweenda (1.000 - 1.099)  
+
+### Kihumbi na higuma ku kihumbi na mweenda (1.001 - 1.009)
 
 1.001 = Kihumbi na higuma    
 1.002 = Kihumbi na bubiri    
@@ -10,9 +12,11 @@
 1.006 = Kihumbi na ndatu    
 1.007 = Kihumbi na buliinda    
 1.008 = Kihumbi na munaana    
-1.009 = Kihumbi na mweenda    
-1.010 = Kihumbi n'ikumi  
+1.009 = Kihumbi na mweenda  
 
+### Kihumbi n'ikumi na higuma ku kihumbi n'ikumi na mweenda (1.010 - 1.019)
+   
+1.010 = Kihumbi n'ikumi   
 1.011 = Kihumbi n'ikumi na higuma  
 1.012 = Kihumbi n'ikumi na bubiri     
 1.013 = Kihumbi n'ikumi na bushatu    
@@ -22,6 +26,8 @@
 1.017 = Kihumbi n'ikumi na buliinda   
 1.018 = Kihumbi n'ikumi na munaana    
 1.019 = Kihumbi n'ikumi na mweenda 
+
+### Kihumbi ma makumi gabiri ku kihumbi na makumi gabiri na mweenda (1.020 - 1.029)
 
 1.020 = Kihumbi na makumi gabiri  
 1.021 = Kihumbi na makumi gabiri na higuma  
@@ -34,6 +40,8 @@
 1.028 = Kihumbi na makumi gabiri na munaana    
 1.029 = Kihumbi na makumi gabiri na mweenda 
 
+### Kihumbi ma makumi gashatu ku kihumbi na makumi gashatu na mweenda (1.030 - 1.039)
+
 1.030 = Kihumbi na makumi gashatu  
 1.031 = Kihumbi na makumi gashatu na higuma  
 1.032 = Kihumbi na makumi gashatu na bubiri    
@@ -45,6 +53,7 @@
 1.038 = Kihumbi na makumi gashatu na munaana    
 1.039 = Kihumbi na makumi gashatu na mweenda  
 
+### Kihumbi ma makumi gana ku kihumbi na makumi gana na mweenda (1.040 - 1.049)
 
 1.040 = Kihumbi na makumi gana  
 1.041 = Kihumbi na makumi gana na higuma  
@@ -57,6 +66,7 @@
 1.048 = Kihumbi na makumi gana na munaana    
 1.049 = Kihumbi na makumi gana na mweenda  
 
+### Kihumbi ma makumi gatanu ku kihumbi na makumi gatanu na mweenda (1.050 - 1.059)
 
 1.050 = Kihumbi na makumi gatanu  
 1.051 = Kihumbi na makumi gatanu na higuma  
@@ -69,6 +79,7 @@
 1.058 = Kihumbi na makumi gatanu na munaana    
 1.059 = Kihumbi na makumi gatanu na mweenda 
 
+### Kihumbi ma makumi galiindatu ku kihumbi na makumi galiindatu na mweenda (1.060 - 1.069)
 
 1.060 = Kihumbi na makumi galindatu  
 1.061 = Kihumbi na makumi galindatu na higuma  
@@ -81,6 +92,7 @@
 1.068 = Kihumbi na makumi galindatu na munaana       
 1.069 = Kihumbi na makumi galindatu na mweenda 
 
+### Kihumbi ma makumi galiinda ku kihumbi na makumi galiinda na mweenda (1.070 - 1.079)
 
 1.070 = Kihumbi na makumi galiinda  
 1.071 = Kihumbi na makumi galiinda na higuma  
@@ -93,6 +105,7 @@
 1.078 = Kihumbi na makumi galiinda na munaana  
 1.079 = Kihumbi na makumi galiinda na mweenda 
 
+### Kihumbi ma makumi galimunaana ku kihumbi na makumi galimunaana na mweenda (1.080 - 1.089)
 
 1.080 = Kihumbi na makumi galimunaana  
 1.081 = Kihumbi na makumi galimunaana na higuma  
@@ -105,6 +118,7 @@
 1.088 = Kihumbi na makumi galimunaana na munaana  
 1.089 = Kihumbi na makumi galimunaana na mweenda 
 
+### Kihumbi ma makumi galimweenda ku kihumbi na makumi galimweenda na mweenda (1.090 - 1.099)
 
 1.090 = Kihumbi na makumi galimweenda  
 1.091 = Kihumbi na makumi galimweenda na higuma  
@@ -251,9 +265,9 @@
 1.198 = Kihumbi n'igana na makumi galimweenda na munaana  
 1.199 = Kihumbi n'igana na makumi galimweenda na mweenda 
 
-
 ## Kihumbi na magana gabiri ku kihumbi na magana gabiri na makumi galimweenda na mweenda (1.200 - 1.299) 
 
+### Kihumbi na magana gabiri ku kihumbi na magana gabiri na mweenda (1.200 - 1.209) 
 1.200 = Kihumbi na magana gabiri  
 1.201 = Kihumbi na magana gabiri na higuma  
 1.202 = Kihumbi na magana gabiri na bubiri    
@@ -263,7 +277,9 @@
 1.206 = Kihumbi na magana gabiri na ndaatu  
 1.207 = Kihumbi na magana gabiri na bulinda    
 1.208 = Kihumbi na magana gabiri na munaana  
-1.209 = Kihumbi na magana gabiri na mweenda
+1.209 = Kihumbi na magana gabiri na mweenda  
+
+### Kihumbi na magana gabiri n'ikumi ku kihumbi na magana gabiri n'ikumi na mweenda (1.210 - 1.219) 
 
 1.210 = Kihumbi na magana gabiri n'ikumi  
 1.211 = Kihumbi na magana gabiri n'ikumi na higuma  
@@ -276,6 +292,8 @@
 1.218 = Kihumbi na magana gabiri n'ikumi na munaana  
 1.219 = Kihumbi na magana gabiri n'ikumi na mweenda
 
+### Kihumbi na magana gabiri na makumi gabiri ku kihumbi na magana gabiri na makumi gabiri na mweenda (1.210 - 1.219) 
+
 1.220 = Kihumbi na magana gabiri na makumi gabiri  
 1.221 = Kihumbi na magana gabiri na makumi gabiri na higuma  
 1.222 = Kihumbi na magana gabiri na makumi gabiri na bubiri    
@@ -286,6 +304,8 @@
 1.227 = Kihumbi na magana gabiri na makumi gabiri na bulinda    
 1.228 = Kihumbi na magana gabiri na makumi gabiri na munaana  
 1.229 = Kihumbi na magana gabiri na makumi gabiri na mweenda
+
+### Kihumbi na magana gabiri na makumi gashatu ku kihumbi na magana gabiri na makumi gashatu na mweenda (1.230 - 1.239) 
 
 1.230 = Kihumbi na magana gabiri na makumi gashatu  
 1.231 = Kihumbi na magana gabiri na makumi gashatu na higuma  
@@ -298,6 +318,8 @@
 1.238 = Kihumbi na magana gabiri na makumi gashatu na munaana  
 1.239 = Kihumbi na magana gabiri na makumi gashatu na mweenda
 
+### Kihumbi na magana gabiri na makumi gana ku kihumbi na magana gabiri na makumi gana na mweenda (1.240 - 1.249) 
+
 1.240 = Kihumbi na magana gabiri na makumi gana  
 1.241 = Kihumbi na magana gabiri na makumi gana na higuma  
 1.242 = Kihumbi na magana gabiri na makumi gana na bubiri    
@@ -308,6 +330,8 @@
 1.247 = Kihumbi na magana gabiri na makumi gana na bulinda    
 1.248 = Kihumbi na magana gabiri na makumi gana na munaana  
 1.249 = Kihumbi na magana gabiri na makumi gana na mweenda
+
+### Kihumbi na magana gabiri na makumi gatanu ku kihumbi na magana gabiri na makumi gatanu na mweenda (1.250 - 1.259) 
 
 1.250 = Kihumbi na magana gabiri na makumi gatanu  
 1.251 = Kihumbi na magana gabiri na makumi gatanu na higuma  
@@ -320,6 +344,8 @@
 1.258 = Kihumbi na magana gabiri na makumi gatanu na munaana  
 1.259 = Kihumbi na magana gabiri na makumi gatanu na mweenda
 
+### Kihumbi na magana gabiri na makumi galiindatu ku kihumbi na magana gabiri na makumi galiindatu na mweenda (1.260 - 1.269) 
+
 1.260 = Kihumbi na magana gabiri na makumi galindatu  
 1.261 = Kihumbi na magana gabiri na makumi galindatu na higuma  
 1.262 = Kihumbi na magana gabiri na makumi galindatu na bubiri    
@@ -330,6 +356,8 @@
 1.267 = Kihumbi na magana gabiri na makumi galindatu na bulinda    
 1.268 = Kihumbi na magana gabiri na makumi galindatu na munaana  
 1.269 = Kihumbi na magana gabiri na makumi galindatu na mweenda
+
+### Kihumbi na magana gabiri na makumi galiinda ku kihumbi na magana gabiri na makumi galiinda na mweenda (1.270 - 1.279) 
 
 1.270 = Kihumbi na magana gabiri na makumi galinda  
 1.271 = Kihumbi na magana gabiri na makumi galinda na higuma  
@@ -342,6 +370,8 @@
 1.278 = Kihumbi na magana gabiri na makumi galinda na munaana  
 1.279 = Kihumbi na magana gabiri na makumi galinda na mweenda
 
+### Kihumbi na magana gabiri na makumi galimunaana ku kihumbi na magana gabiri na makumi galimuaana na mweenda (1.280 - 1.289) 
+
 1.280 = Kihumbi na magana gabiri na makumi galimunaana  
 1.281 = Kihumbi na magana gabiri na makumi galimunaana na higuma  
 1.282 = Kihumbi na magana gabiri na makumi galimunaana na bubiri    
@@ -353,6 +383,8 @@
 1.288 = Kihumbi na magana gabiri na makumi galimunaana na munaana  
 1.289 = Kihumbi na magana gabiri na makumi galimunaana na mweenda
 
+### Kihumbi na magana gabiri na makumi galimweenda ku kihumbi na magana gabiri na makumi galimweenda na mweenda (1.290 - 1.299) 
+
 1.290 = Kihumbi na magana gabiri na makumi galimweenda  
 1.291 = Kihumbi na magana gabiri na makumi galimweenda na higuma  
 1.292 = Kihumbi na magana gabiri na makumi galimweenda na bubiri    
@@ -363,3 +395,145 @@
 1.297 = Kihumbi na magana gabiri na makumi galimweenda na bulinda    
 1.298 = Kihumbi na magana gabiri na makumi galimweenda na munaana  
 1.299 = Kihumbi na magana gabiri na makumi galimweenda na mweenda  
+
+
+
+
+
+
+
+
+
+
+
+## Kihumbi na magana gashatu ku kihumbi na magana gashatu na makumi galimweenda na mweenda (1.300 - 1.399) 
+
+### Kihumbi na magana gashatu ku kihumbi na magana gashatu na mweenda (1.300 - 1.309) 
+1.300 = Kihumbi na magana gashatu  
+1.301 = Kihumbi na magana gashatu na higuma  
+1.302 = Kihumbi na magana gashatu na bubiri    
+1.303 = Kihumbi na magana gashatu na bushatu  
+1.304 = Kihumbi na magana gashatu na buna  
+1.305 = Kihumbi na magana gashatu na butanu  
+1.306 = Kihumbi na magana gashatu na ndaatu  
+1.307 = Kihumbi na magana gashatu na bulinda    
+1.308 = Kihumbi na magana gashatu na munaana  
+1.309 = Kihumbi na magana gashatu na mweenda  
+
+### Kihumbi na magana gashatu n'ikumi ku kihumbi na magana gashatu n'ikumi na mweenda (1.310 - 1.319) 
+
+1.310 = Kihumbi na magana gashatu n'ikumi  
+1.311 = Kihumbi na magana gashatu n'ikumi na higuma  
+1.312 = Kihumbi na magana gashatu n'ikumi na bubiri    
+1.313 = Kihumbi na magana gashatu n'ikumi na bushatu  
+1.314 = Kihumbi na magana gashatu n'ikumi na buna  
+1.315 = Kihumbi na magana gashatu n'ikumi na butanu  
+1.316 = Kihumbi na magana gashatu n'ikumi na ndaatu  
+1.317 = Kihumbi na magana gashatu n'ikumi na bulinda    
+1.318 = Kihumbi na magana gashatu n'ikumi na munaana  
+1.319 = Kihumbi na magana gashatu n'ikumi na mweenda
+
+### Kihumbi na magana gashatu na makumi gashatu ku kihumbi na magana gashatu na makumi gashatu na mweenda (1.310 - 1.319) 
+
+1.320 = Kihumbi na magana gashatu na makumi gashatu  
+1.321 = Kihumbi na magana gashatu na makumi gashatu na higuma  
+1.322 = Kihumbi na magana gashatu na makumi gashatu na bubiri    
+1.323 = Kihumbi na magana gashatu na makumi gashatu na bushatu  
+1.324 = Kihumbi na magana gashatu na makumi gashatu na buna  
+1.325 = Kihumbi na magana gashatu na makumi gashatu na butanu  
+1.326 = Kihumbi na magana gashatu na makumi gashatu na ndaatu  
+1.327 = Kihumbi na magana gashatu na makumi gashatu na bulinda    
+1.328 = Kihumbi na magana gashatu na makumi gashatu na munaana  
+1.329 = Kihumbi na magana gashatu na makumi gashatu na mweenda
+
+### Kihumbi na magana gashatu na makumi gashatu ku kihumbi na magana gashatu na makumi gashatu na mweenda (1.330 - 1.339) 
+
+1.330 = Kihumbi na magana gashatu na makumi gashatu  
+1.331 = Kihumbi na magana gashatu na makumi gashatu na higuma  
+1.332 = Kihumbi na magana gashatu na makumi gashatu na bubiri    
+1.333 = Kihumbi na magana gashatu na makumi gashatu na bushatu  
+1.334 = Kihumbi na magana gashatu na makumi gashatu na buna  
+1.335 = Kihumbi na magana gashatu na makumi gashatu na butanu  
+1.336 = Kihumbi na magana gashatu na makumi gashatu na ndaatu  
+1.337 = Kihumbi na magana gashatu na makumi gashatu na bulinda    
+1.338 = Kihumbi na magana gashatu na makumi gashatu na munaana  
+1.339 = Kihumbi na magana gashatu na makumi gashatu na mweenda
+
+### Kihumbi na magana gashatu na makumi gana ku kihumbi na magana gashatu na makumi gana na mweenda (1.340 - 1.349) 
+
+1.340 = Kihumbi na magana gashatu na makumi gana  
+1.341 = Kihumbi na magana gashatu na makumi gana na higuma  
+1.342 = Kihumbi na magana gashatu na makumi gana na bubiri    
+1.343 = Kihumbi na magana gashatu na makumi gana na bushatu  
+1.344 = Kihumbi na magana gashatu na makumi gana na buna  
+1.345 = Kihumbi na magana gashatu na makumi gana na butanu  
+1.346 = Kihumbi na magana gashatu na makumi gana na ndaatu  
+1.347 = Kihumbi na magana gashatu na makumi gana na bulinda    
+1.348 = Kihumbi na magana gashatu na makumi gana na munaana  
+1.349 = Kihumbi na magana gashatu na makumi gana na mweenda
+
+### Kihumbi na magana gashatu na makumi gatanu ku kihumbi na magana gashatu na makumi gatanu na mweenda (1.350 - 1.359) 
+
+1.350 = Kihumbi na magana gashatu na makumi gatanu  
+1.351 = Kihumbi na magana gashatu na makumi gatanu na higuma  
+1.352 = Kihumbi na magana gashatu na makumi gatanu na bubiri    
+1.353 = Kihumbi na magana gashatu na makumi gatanu na bushatu  
+1.354 = Kihumbi na magana gashatu na makumi gatanu na buna  
+1.355 = Kihumbi na magana gashatu na makumi gatanu na butanu  
+1.356 = Kihumbi na magana gashatu na makumi gatanu na ndaatu  
+1.357 = Kihumbi na magana gashatu na makumi gatanu na bulinda    
+1.358 = Kihumbi na magana gashatu na makumi gatanu na munaana  
+1.359 = Kihumbi na magana gashatu na makumi gatanu na mweenda
+
+### Kihumbi na magana gashatu na makumi galiindatu ku kihumbi na magana gashatu na makumi galiindatu na mweenda (1.360 - 1.369) 
+
+1.360 = Kihumbi na magana gashatu na makumi galindatu  
+1.361 = Kihumbi na magana gashatu na makumi galindatu na higuma  
+1.362 = Kihumbi na magana gashatu na makumi galindatu na bubiri    
+1.363 = Kihumbi na magana gashatu na makumi galindatu na bushatu  
+1.364 = Kihumbi na magana gashatu na makumi galindatu na buna  
+1.365 = Kihumbi na magana gashatu na makumi galindatu na butanu  
+1.366 = Kihumbi na magana gashatu na makumi galindatu na ndaatu  
+1.367 = Kihumbi na magana gashatu na makumi galindatu na bulinda    
+1.368 = Kihumbi na magana gashatu na makumi galindatu na munaana  
+1.369 = Kihumbi na magana gashatu na makumi galindatu na mweenda
+
+### Kihumbi na magana gashatu na makumi galiinda ku kihumbi na magana gashatu na makumi galiinda na mweenda (1.370 - 1.379) 
+
+1.370 = Kihumbi na magana gashatu na makumi galinda  
+1.371 = Kihumbi na magana gashatu na makumi galinda na higuma  
+1.372 = Kihumbi na magana gashatu na makumi galinda na bubiri    
+1.373 = Kihumbi na magana gashatu na makumi galinda na bushatu  
+1.374 = Kihumbi na magana gashatu na makumi galinda na buna  
+1.375 = Kihumbi na magana gashatu na makumi galinda na butanu  
+1.376 = Kihumbi na magana gashatu na makumi galinda na ndaatu  
+1.377 = Kihumbi na magana gashatu na makumi galinda na bulinda    
+1.378 = Kihumbi na magana gashatu na makumi galinda na munaana  
+1.379 = Kihumbi na magana gashatu na makumi galinda na mweenda
+
+### Kihumbi na magana gashatu na makumi galimunaana ku kihumbi na magana gashatu na makumi galimuaana na mweenda (1.380 - 1.389) 
+
+1.380 = Kihumbi na magana gashatu na makumi galimunaana  
+1.381 = Kihumbi na magana gashatu na makumi galimunaana na higuma  
+1.382 = Kihumbi na magana gashatu na makumi galimunaana na bubiri    
+1.383 = Kihumbi na magana gashatu na makumi galimunaana na bushatu  
+1.384 = Kihumbi na magana gashatu na makumi galimunaana na buna  
+1.385 = Kihumbi na magana gashatu na makumi galimunaana na butanu  
+1.386 = Kihumbi na magana gashatu na makumi galimunaana na ndaatu  
+1.387 = Kihumbi na magana gashatu na makumi galimunaana na bulinda    
+1.388 = Kihumbi na magana gashatu na makumi galimunaana na munaana  
+1.389 = Kihumbi na magana gashatu na makumi galimunaana na mweenda
+
+### Kihumbi na magana gashatu na makumi galimweenda ku kihumbi na magana gashatu na makumi galimweenda na mweenda (1.390 - 1.399) 
+
+1.390 = Kihumbi na magana gashatu na makumi galimweenda  
+1.391 = Kihumbi na magana gashatu na makumi galimweenda na higuma  
+1.392 = Kihumbi na magana gashatu na makumi galimweenda na bubiri    
+1.393 = Kihumbi na magana gashatu na makumi galimweenda na bushatu  
+1.394 = Kihumbi na magana gashatu na makumi galimweenda na buna  
+1.395 = Kihumbi na magana gashatu na makumi galimweenda na butanu  
+1.396 = Kihumbi na magana gashatu na makumi galimweenda na ndaatu  
+1.397 = Kihumbi na magana gashatu na makumi galimweenda na bulinda    
+1.398 = Kihumbi na magana gashatu na makumi galimweenda na munaana  
+1.399 = Kihumbi na magana gashatu na makumi galimweenda na mweenda  
+
