Add bihumbi bibiri to bihumbi ikumi

--- a/pages/tusome/ukuharura/kihumbi.mdx
+++ b/pages/tusome/ukuharura/kihumbi.mdx
@@ -1,4 +1,4 @@
-# Ukuharurua kushagira ku kihumbi ukuhisa ku kihumbi na gana galimweenda na mweenda 
+# Ukuharurua kushagira ku kihumbi ukuhisa ku kihumbi na gana galimweenda na makumi galimweenda na mweenda (1.000 - 1.999)
 
 ## Kihumbi ukuhisa ku kihumbi na makumi galimweenda na mweenda (1.000 - 1.099)  
 
