Remove GitHub on webisite

--- a/pages/ukuharura/bihumbi-makumi-gabiri-na-bibiri.mdx
+++ b/pages/ukuharura/bihumbi-makumi-gabiri-na-bibiri.mdx
@@ -1,4 +1,6 @@
-# Ukuharurua kushagira ku bihumbi makumi gabiri na bibiri na kiguma ukuhisa ku Bihumbi makumi gabiri na bibiri na kiguma na gana galimweenda na makumi galimweenda na mweenda (22.000 - 22.999) 
+# Bihumbi makumi gabiri na bibiri na kiguma ukuhisa ku Bihumbi makumi gabiri na bibiri na kiguma na gana galimweenda na makumi galimweenda na mweenda (22.000 - 22.999) 
+
+Ukuharurua kushagira ku bihumbi makumi gabiri na bibiri na kiguma ukuhisa ku Bihumbi makumi gabiri na bibiri na kiguma na gana galimweenda na makumi galimweenda na mweenda (22.000 - 22.999) 
 
 ## Bihumbi makumi gabiri na bibiri ukuhisa ku Bihumbi makumi gabiri na bibiri na makumi galimweenda na mweenda (22.000 - 22.099)  
 
