Add content to  english, swahili, french

--- a/pages/english.mdx
+++ b/pages/english.mdx
@@ -40,6 +40,9 @@ By joining the Kifuliiru Project, you will be part of a dynamic community dedica
 
 ## Contact Us
 
-We would love to hear from you! Please fill out the [Contact Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact) to express your interest in joining us. Share your skills, passions, and how you envision contributing to our projects. 
+We would love to hear from you! Please fill out the [contact Mr. Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact) to express your interest in joining us. Share your skills, passions, and how you envision contributing to our projects. 
 
 Together, we can make a difference in elevating the Kifuliiru language and culture for future generations!
+
+
+Find us on social media: [Facebook ](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), na [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
