--- a/pages/francais.mdx
+++ b/pages/francais.mdx
@@ -1,5 +1,5 @@
 
-## French Version
+## En Fançais
 
 # Bienvenue au Projet Kifuliiru !
 
@@ -43,7 +43,9 @@ En rejoignant le Projet Kifuliiru, vous ferez partie d'une communauté dynamique
 
 ## Contactez-Nous
 
-Nous aimerions avoir de vos nouvelles ! Veuillez remplir le [lien du formulaire de contact] pour exprimer votre intérêt à nous rejoindre. Partagez vos compétences, vos passions et comment vous envisagez de contribuer à nos projets.
+Nous aimerions avoir de vos nouvelles ! Veuillez remplir le [veuillez contacter Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact) pour exprimer votre intérêt à nous rejoindre. Partagez vos compétences, vos passions et comment vous envisagez de contribuer à nos projets.
 
 Ensemble, nous pouvons faire la différence en élevant la langue et la culture Kifuliiru pour les générations futures !
+
+Trouvez-nous sur les réseaux sociaux: [Facebook](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), na [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
 
