--- a/pages/kiswahili.mdx
+++ b/pages/kiswahili.mdx
@@ -47,8 +47,7 @@ Hapa kuna sehemu ya "Wasiliana Nasi" iliyokamilishwa:
 
 Tunapenda kusikia kutoka kwako! Ikiwa una maswali, maoni, au unataka kujifunza zaidi kuhusu miradi yetu, tafadhali usisite kutufikia. Unaweza kutufikia kupitia:
 
-- **Barua pepe:** [imyazimukifuliiru@gmail.com](mailto:imyazimukifuliiru@gmail.com)
-- **Simu:** +1 (509) 957-5984
-- **Mitandao ya Kijamii:** Tutafuteni __Ibufuliiru__ kwenye [Facebook](#), [Twitter](#), na [Instagram](#) kwa habari na updates za hivi punde.
+- **Barua pepe:** [Wasiliana na Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact)
+- **Mitandao ya Kijamii:** Tutafuteni kwenye [Facebook](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), na [Instagram](https://www.instagram.com/ibufuliiru/?hl=en) kwa habari na updates za hivi punde.
 
 Tafadhali jisikie huru kututumia ujumbe, na tutajitahidi kujibu haraka iwezekanavyo. Tunatarajia kufanya kazi pamoja nawe katika kukuza na kuendeleza lugha ya Kifuliiru!
