Add updates to README file

--- a/pages/english.mdx
+++ b/pages/english.mdx
@@ -30,7 +30,7 @@ We believe that community involvement is key to the success of our projects. If 
 
 ## How to Get Involved
 
-We welcome anyone interested in collaborating with us to share their skills and passion. If you're excited about the possibility of working together, please fill out the contact form below. Be sure to include details about your skills, interests, and any specific projects you’re interested in contributing to. 
+We welcome anyone interested in collaborating with us to share their skills and passion. If you're excited about the possibility of working together, please fill out the contact form below. Be sure to include details about your skills, interests, and any specific projects you’re interested in contributing to.
 
 We are committed to fostering an inclusive environment where every voice is heard and valued. Your ideas and contributions will help shape the direction of our projects and the community as a whole.
 
@@ -40,9 +40,8 @@ By joining the Kifuliiru Project, you will be part of a dynamic community dedica
 
 ## Contact Us
 
-We would love to hear from you! Please fill out the [contact Mr. Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact) to express your interest in joining us. Share your skills, passions, and how you envision contributing to our projects. 
+We would love to hear from you! Please fill out the [contact Mr. Ayivugwe Kabemba Mukome](https://www.ayivugwekabemba.me/contact) to express your interest in joining us. Share your skills, passions, and how you envision contributing to our projects.
 
 Together, we can make a difference in elevating the Kifuliiru language and culture for future generations!
 
-
-Find us on social media: [Facebook ](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), na [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
+Find us on social media: [Facebook ](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), and [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
