--- a/pages/francais.mdx
+++ b/pages/francais.mdx
@@ -1,4 +1,3 @@
-
 ## En Fançais
 
 # Bienvenue au Projet Kifuliiru !
@@ -47,5 +46,4 @@ Nous aimerions avoir de vos nouvelles ! Veuillez remplir le [veuillez contacter 
 
 Ensemble, nous pouvons faire la différence en élevant la langue et la culture Kifuliiru pour les générations futures !
 
-Trouvez-nous sur les réseaux sociaux: [Facebook](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), na [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
-
+Trouvez-nous sur les réseaux sociaux: [Facebook](https://www.facebook.com/Ibufuliiru/), [Twitter](https://twitter.com/ibufuliiru?lang=en), et [Instagram](https://www.instagram.com/ibufuliiru/?hl=en)
